monticore-generator/src/test/resources/cocos/invalid/A4054/A4054.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4054;

grammar A4054 {

  A = "";

}
